# mlas_dseries

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
mlas_dseries/: dstability.py
tests/: test_dstability.py  test_mlas_dseries.py
