[tool.poetry]
name = "mlas_dseries"
version = "0.1.0"
description = ""
authors = ["Breinbaas | Rob van Putten <breinbaasnl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
